[project]
name = "ansible-toolbox"
version = "0.1.0"
description = "Run Anisble Playbooks from a docker container"
authors = [{ name = "Nuno Goncalves", email = "nunog@nasgware.com" }]
maintainers = [{ name = "Nuno Goncalves", email = "nunog@nasgware.com" }]
dependencies = []
requires-python = ">=3.8"
readme = "README.md"
license = { text = "MIT" }

[project.scripts]
at = "ansible_toolbox.__main__:main"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
dev = [
    "pytest-cov>=5.0.0",
    "pytest>=8.3.3",
    "pyinstall>=0.1.4",
    "ruff>=0.7.0",
    "mypy>=1.12.0",
    "pyclean>=3.1.0",
]

[tool.pdm.scripts]
at = { call = "ansible_toolbox.__main__:main" }
